[gd_scene load_steps=17 format=3 uid="uid://cbrwqf5pcw1dk"]

[ext_resource type="Script" uid="uid://biol5r6f4qc0" path="res://Scripts/Enemies/skeleton.gd" id="1_05oj5"]
[ext_resource type="Script" uid="uid://dilobftbwdc06" path="res://Scripts/Components/pathfind_component.gd" id="1_fjg4h"]
[ext_resource type="Texture2D" uid="uid://okqg8lf2yvs6" path="res://Assets/AtlasLibrary/pixelart_skull.png" id="2_eiu2b"]
[ext_resource type="Script" uid="uid://ddf17wktylpnf" path="res://Scripts/Components/enemy_attack_component.gd" id="2_loktk"]
[ext_resource type="Script" uid="uid://bib7kf0agtl4x" path="res://Scripts/Components/hitbox_component.gd" id="3_nu5bn"]
[ext_resource type="Script" uid="uid://e4pcoa8cbht" path="res://Scripts/Components/detection_region.gd" id="3_rjsu3"]
[ext_resource type="Script" uid="uid://dn4r5xhpbovk0" path="res://Scripts/Components/hurtbox_component.gd" id="4_eiu2b"]
[ext_resource type="Script" uid="uid://o7jse03upp4f" path="res://Scripts/Components/health_component.gd" id="5_nu5bn"]
[ext_resource type="Script" uid="uid://bwjvmcyifyodr" path="res://Scripts/Components/forces_component.gd" id="7_n5ohb"]
[ext_resource type="PackedScene" uid="uid://l0okk36120yj" path="res://Scenes/Enemies/patrol_region.tscn" id="10_n5ohb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_613su"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6ry3g"]
atlas = ExtResource("2_eiu2b")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_rjsu3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ry3g")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rjsu3"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eiu2b"]
radius = 11.0454

[sub_resource type="CircleShape2D" id="CircleShape2D_6ry3g"]
radius = 11.0454

[node name="Skeleton" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="." node_paths=PackedStringArray("force_component", "animation_source")]
collision_layer = 17
collision_mask = 17
script = ExtResource("1_05oj5")
force_component = NodePath("ForcesComponent")
animation_source = NodePath("AnimatedSprite2D")

[node name="PathfindComponent" type="Node2D" parent="CharacterBody2D" node_paths=PackedStringArray("navigation_agent", "body", "timer")]
script = ExtResource("1_fjg4h")
navigation_agent = NodePath("NavigationAgent2D")
body = NodePath("..")
timer = NodePath("Timer")
metadata/_custom_type_script = "uid://dilobftbwdc06"

[node name="Timer" type="Timer" parent="CharacterBody2D/PathfindComponent"]
wait_time = 0.1
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="CharacterBody2D/PathfindComponent"]
debug_enabled = true
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_613su")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_rjsu3")
animation = &"idle"

[node name="DetectionRegion" type="Area2D" parent="CharacterBody2D" node_paths=PackedStringArray("pathfind_component")]
collision_layer = 8
collision_mask = 8
script = ExtResource("3_rjsu3")
pathfind_component = NodePath("../PathfindComponent")
metadata/_custom_type_script = "uid://e4pcoa8cbht"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/DetectionRegion"]
shape = SubResource("CircleShape2D_rjsu3")
debug_color = Color(0.577702, 0.505823, 0.559481, 0.419608)

[node name="Hitbox" type="Area2D" parent="CharacterBody2D" node_paths=PackedStringArray("attack_component")]
script = ExtResource("3_nu5bn")
attack_component = NodePath("../../Attack")
metadata/_custom_type_script = "uid://bib7kf0agtl4x"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Hitbox"]
shape = SubResource("CircleShape2D_eiu2b")

[node name="Hurtbox" type="Area2D" parent="CharacterBody2D" node_paths=PackedStringArray("health_component")]
script = ExtResource("4_eiu2b")
health_component = NodePath("../../Health")
metadata/_custom_type_script = "uid://dn4r5xhpbovk0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Hurtbox"]
shape = SubResource("CircleShape2D_6ry3g")

[node name="ForcesComponent" type="Node2D" parent="CharacterBody2D" node_paths=PackedStringArray("body")]
script = ExtResource("7_n5ohb")
body = NodePath("..")
metadata/_custom_type_script = "uid://bwjvmcyifyodr"

[node name="CastPoint" type="Marker2D" parent="CharacterBody2D"]
gizmo_extents = 20.0

[node name="Attack" type="Node2D" parent="." node_paths=PackedStringArray("detection_region", "cast_point")]
script = ExtResource("2_loktk")
detection_region = NodePath("../CharacterBody2D/DetectionRegion")
cast_point = NodePath("../CharacterBody2D/CastPoint")
metadata/_custom_type_script = "uid://ddf17wktylpnf"

[node name="Health" type="Node2D" parent="."]
script = ExtResource("5_nu5bn")
metadata/_custom_type_script = "uid://o7jse03upp4f"

[node name="PatrolRegion" parent="." node_paths=PackedStringArray("pathfinder") instance=ExtResource("10_n5ohb")]
pathfinder = NodePath("../CharacterBody2D/PathfindComponent")

[connection signal="body_entered" from="CharacterBody2D/DetectionRegion" to="CharacterBody2D/DetectionRegion" method="_on_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/DetectionRegion" to="CharacterBody2D/DetectionRegion" method="_on_body_exited"]
